# crypto-trading-bot

./: .gitignore  LICENSE  Makefile  PORTFOLIO.md  README.md  TODO.md  bot.py  clean_data.py  config.ini.example  docker-compose.yml  pre-commit  pyproject.toml  requirements.txt  run_grid_trading_bot.py  run_simple_trading_bot.py  run_stablecoin_swap_bot.py  run_stagging_bot.py  solana_token_holdings_analysis.py
etc/: grid_trading_bot.json  stablecoin_swap_bot.json  stagging_bot.json
infra/: infra_mongo.yml
internal/bot/: grid_trading_bot.py  simple_trading_bot.py  stablecoin_swap_bot.py  stagging_bot.py
internal/config/: __init__.py  config_class.py
internal/db/: __init__.py  mongo.py
internal/grid_trading_bot/: __init__.py  bot.py
internal/infra/http/: http_client.py  http_session.py  http_tracing.py
internal/infra/ratelimiter/: __init__.py  redis_gcra.py  redis_gcra_lua.py  redis_gcra_test.py
internal/ratelimiter/: __init__.py  decorators.py  exception.py
internal/singleton/: __init__.py
internal/stablecoin_swap_bot/: __init__.py
internal/stagging_bot/: __init__.py  bot.py
internal/utils/: global_vars.py  helper.py  loguru_logger.py
